Fix pb marker vertical baseline alignment in headings
Agent-Logs-Url: https://github.com/bundesverfassung-oesterreich/bv-static/sessions/ec70e820-18b5-4cb6-ad8e-ecbd797ad5db

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -997,22 +997,25 @@ span.pb::marker {
 
 span.pb {
     visibility: visible;
-    line-height: inherit;
     display: inline-block;
-    position: absolute;
-    left: -1.5rem;
+    width: 0;
+    height: 0;
+    overflow: visible;
+    vertical-align: baseline;
+    position: relative;
     scroll-margin-top: 100px;
-    /* width: 1.5rem;
-    margin-top: var(--default-line-height-negative); */
 }
  
 span.pb::before {
     display: inline-block;
+    position: absolute;
+    bottom: 0;
+    right: 0;
     opacity: 0.5;
     font-weight: bold;
     content: "| " var(--beginning_page);
+    white-space: nowrap;
     text-align: right;
-    left: -1.5rem;
 }
 
 span.pb_marker {
